# video_reader

./: CMakeLists.txt
config/: camera_info.yaml  camera_params.yaml
include/video_reader/: video_reader_node.hpp
src/: video_reader_node.cpp
